# drf-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
cookiecutters/model/: cookiecutter.json
cookiecutters/project/{{cookiecutter.module_name}}/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  pytest.ini  settings.yaml  setup.cfg
cookiecutters/project/{{cookiecutter.module_name}}/tests/: test_{{cookiecutter.module_name}}.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/: router.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/admin/: user.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/apps/: __init__.py  {{cookiecutter.module_name}}.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/managers/: __init__.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/managers/tests/: test_user_manager.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/mixins/: __init__.py  model.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/models/: user.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/models/tests/: test_user_model.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/router/: __init__.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/serializers/: profile.py  user.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/tests/managers/: test_user_manager.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/views/: __init__.py  profile.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/app/viewsets/: user.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apps/rest_api/: apps.py  router.py
cookiecutters/project/{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apps/user/: apps.py
drf_cli/: app.py
(+22 files in other folders)
