[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
dynaconf = {version = "^2.2.3", extras = ["yaml"]}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fake = "^0.8"
mixer = "^6.1.3"
pytest-cov = "^2.8.1"
pytest-django = "^3.9.0"
pre-commit = "^2.3.0"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
isort = "^4.3.21"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

