[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.0.5"
dynaconf = {version = "^2.2.3", extras = ["yaml"]}
gunicorn = "^20.0.4"
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fake = "^0.8"
mixer = "^6.1.3"
pytest-cov = "^2.8.1"
pytest-django = "^3.9.0"
pre-commit = "^2.3.0"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
